# Voxel-C

./: .gitignore  CMakeLists.txt  build_clean.bat  camera.h  heightmap_generator.cpp  heightmap_generator.h  mesh.h  model.cpp  model.h  shader.h  voxel_world.cpp  voxel_world.h  window.cpp
lib/assimp/lib/: zlibstatic.lib
lib/assimp/lib/pkgconfig/: assimp.pc
lib/glfw3/: glfw3_debug.lib  glfw3_release.lib
lib/glfw3/lib/: glfw3.lib
lib/glfw3/lib/pkgconfig/: glfw3.pc
models/cobblestone block/: cube.mtl
models/dirt block/: cube.mtl
models/grass block/: cube.mtl
models/sand block/: cube.mtl
models/stone block/: cube.mtl
models/water block/: cube.mtl
python test/: main_noise.py
shaders/: fragment.fs  voxel.fs  voxel.vs
voxel world/: chunk_mesh.cpp  chunk_mesh.h  voxel_chunk.cpp  voxel_chunk.h  voxel_noise.h  voxel_renderer.cpp  voxel_renderer.h  voxel_types.h  voxel_world.cpp  voxel_world.h
world/: coordinate.h  terrain_generation.cpp  terrain_generation.h  voxel_data.cpp  voxel_data.h  world_constants.h
